# Wallpaper-Sunrise-Sunset

./: LICENSE  README.md  Steps  project.toml  pyproject.toml
plists/: com.emirata.wallpaper.sunrise.plist  com.emirata.wallpaper.sunset.plist  com.emirata.wallpaper.times.plist
scripts/: wallpaper_evening.sh  wallpaper_morning.sh  wallpaper_times.sh
src/: cli.py
src/riset/: cli.py
src/sunproject/: cli.py
src/sunproject.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
