[project]
name = "riset"
version = "0.1.0"
description = "Change macOS wallpapers at sunrise/sunset (CLI)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "eataturk, akeremkaya" }]

[project.scripts]
riset = "riset.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
